Updated upload file naming to support non-Latin1 chars in original file names

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 const { data, error } = await supabaseClient
                     .storage
                     .from('images')
-                    .upload(`deals/${Date.now()}_${file.name}`, file);
+                    .upload(`deals/${Date.now()}`, file);
                 if (error) throw error;
 
                 const publicUrl = supabaseClient
