--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             <div class="mb-3 row">
                 <div class="col">
                     <label for="originalPrice" class="form-label">Original Price ($)</label>
-                    <input type="number" class="form-control" id="originalPrice" name="originalPrice" step="0.01" required>
+                    <input type="number" class="form-control" id="originalPrice" name="originalPrice" step="0.01">
                 </div>
                 <div class="col">
                     <label for="discount" class="form-label">Discount (%)</label>
-                    <input type="number" class="form-control" id="discount" name="discount" min="0" max="100" step="1" required>
+                    <input type="number" class="form-control" id="discount" name="discount" min="0" max="100" step="1">
                 </div>
                 <div class="col">
                     <label for="resultingPrice" class="form-label">Resulting Price ($)</label>
-                    <input type="number" class="form-control" id="resultingPrice" name="resultingPrice" step="0.01" readonly>
+                    <input type="number" class="form-control" id="resultingPrice" name="resultingPrice" step="0.01">
                 </div>
             </div>
             
